# blib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
blib/: estd.hpp  files.hpp  string_funcs.hpp  types.hpp
example/: example.cpp
examples/: example_docopt.cpp  example_estd.cpp  example_files.cpp  example_ranges.cpp  example_strings.cpp  example_types.cpp
